src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
.container {
    height: 80vh;
    max-height: 80vh;
    overflow: hidden;
    width: 100%;

    display: grid;

    grid-template-rows: 60% 40%;
    grid-template-columns: 100%;
    grid-template-areas: "image_gallery" "description";

    row-gap: 0.8rem;

    border-radius: 10px;

    padding: 1rem;
}

@media screen and (width <= 800px) {
    .container {
        padding: 0.2rem;
    }
}

.background {
    background: linear-gradient(
        180deg,
        rgba(69, 69, 68, 0.37) 0%,
        rgba(200, 209, 152, 0.568) 49.48%,
        rgba(69, 69, 68, 0.17) 100%
    );

    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
}

.image_gallery {
    grid-area: image_gallery;

    width: 100%;
    height: 100%;

    display: flex;

    overflow: hidden;
    justify-self: center;
    align-items: center;
}

.description_container {
    grid-area: description;

    display: flex;
    flex-direction: column;
    text-wrap: wrap;
    text-overflow: ellipsis;
    white-space: break-spaces;

    height: 100%;
    overflow: hidden;
}

.description_container h1 {
    margin: 0;
    padding: 0;
}

@media screen and (width <= 600px) {
    .description_container h1 {
        max-height: 60%;
    }
}

.description {
    overflow-y: auto;
    overflow-x: hidden;

    margin: 0;
    padding: 0;

    height: 100%;
}

.immutable {
    user-select: none;
}

.description::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    background-color: var(--scrollbar-background);
}

.description::-webkit-scrollbar {
    width: 0.3rem;
    background-color: var(--scrollbar-background);
}

.description::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-background-thumb);
    border: 2px solid var(--scrollbar-background-border);

    border-radius: 10px;
}

